small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
             <title>johnson maghanga</title>
         </head>
         <body>
-            
+            <h1>naboilwa nandighi naboilwa naboilwa nandighi!!!!!!!!!!! </h1>
         </body>
     </html>
